[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

[project]
name = "bootstrap-resampling"
authors = [{ name = "Samuel Larkin", email = "Samuel.Larkin@cnrc-nrc.gc.ca" }]
description = "Confidence Estimation using Bootstrap Resampling"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["Tool", "CLI"]
classifiers = [
  "Framework :: IPython",
  "Framework :: Jupyter",
  "Intended Audience :: Education",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: User Interfaces",
  "Topic :: System :: Installation/Setup",
  "Topic :: System :: Shells",
  "Topic :: Terminals",
  "Topic :: Utilities",
  "Topic :: Software Development :: User Interfaces",
  "Topic :: System :: Shells",
  "Typing :: Typed",
]
dependencies = ["click", "numpy", "scipy"]
dynamic = ["version"]

[project.optional-dependencies]
dev = ["mypy"]
install = ["pyinstaller"]

[project.scripts]
bootstrap-resampling = "bootstrap_resampling.__main__:main"
bs = "bootstrap_resampling.__main__:main"

[project.urls]
repository = "https://github.com/SamuelLarkin/bootstrap_resampling"

[tool.mypy]
files = "bootstrap_resampling"

[tool.pytest]
testpaths = "tests"
